--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sucks-robot-shit",
+  "name": "sucks-robot-shit-landing",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -18,6 +18,9 @@
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^4.2.1",
-    "postcss": "^8.4.4"
+    "@tailwindcss/aspect-ratio": "^0.4.0",
+    "nuxt-lazy-load": "^1.2.9",
+    "postcss": "^8.4.4",
+    "postcss-nested": "^5.0.6"
   }
 }
