--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "type": "module",
   "name": "sucks-robot-shit-landing",
   "version": "1.0.0",
   "private": true,
@@ -10,12 +11,13 @@
   },
   "dependencies": {
     "core-js": "^3.19.3",
+    "gsap": "npm:@gsap/shockingly@3.10.4",
     "nuxt": "^2.15.8",
+    "swiper": "^8.2.2",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
-    "webpack": "^4.46.0",
-    "gsap": "npm:@gsap/shockingly@3.10.4"
+    "webpack": "^4.46.0"
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^4.2.1",
